http requests practice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-movies *ngIf="isDone"  [list]="['shlomo','juda']" ></app-movies>
-<button (click)="toggleComponent()">toggle</button>
+<!-- <app-movies *ngIf="isDone"  [list]="['shlomo','juda']" ></app-movies>
+<button (click)="toggleComponent()">toggle</button> -->
 
 
+<app-albums></app-albums>
