--- a/src/app/components/template-driven-form/template-driven-form.component.html
+++ b/src/app/components/template-driven-form/template-driven-form.component.html
@@ -1,4 +1,4 @@
-<form novalidate  (ngSubmit)="submitForm()" #f="ngForm">
+<!-- <form novalidate  (ngSubmit)="submitForm()" #f="ngForm">
   <fieldset ngModelGroup="name">
     <div class="form-group">
       <label>First Name</label>
@@ -39,4 +39,7 @@
 <pre>
      {{ f.value | json }}
   </pre
->
+> -->
+
+
+<button (click)="addMovie()">add movie</button>
